# genus

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  INSTALL.txt  Makefile  NORM.txt  __init__.py  cmake_install.cmake  traintest.py~
classifier/: CMakeLists.txt  Makefile  cmake_install.cmake
classifier/include/: Binary_Model.h  Classified_Document.h  Decomposition.h  Definitions.h  Document.h  Document_Set.h  Kernel_Perceptron.h  Model.h  SVM_SMO.h  TopicsArray.h  ml_classification.h
classifier/include/decompositionMatrix/: DecompositionMatrix.h  DecompositionMatrixGenerator.h
classifier/include/helper/: MatrixHelper.h  VectorHelper.h
classifier/include/rankSolver/: AbstractRankSolver.h  BTDGeneralRankSolver.h  BTDOneVsOneRankSolver.h  BTOneVsAllRankSolver.h  RankSolverTester.h  SimpleTeamRankSolver.h
classifier/include/rankSolver/probabilisticModel/: AbstractProbabilisticModel.h  SimpleProbabilisticModel.h
classifier/include/test/: ClassifierTestSuites.h  DecompositionMatrixGeneratorTestSuite.h  RankSolverBenchmarkTestSuite.h  RankSolverTestSuite.h  SimpleTestSuite.h  TestData.h
classifier/src/: Binary_Model.cpp  Classified_Document.cpp  ClassifierTestSuites.cpp  Decomposition.cpp  Document.cpp  Document_Set.cpp  Kernel_Perceptron.cpp  Model.cpp  SVM_SMO.cpp  TopicsArray.cpp  ml_classification.cpp
classifier/src/decompositionMatrix/: DecompositionMatrix.cpp  DecompositionMatrixGenerator.cpp
classifier/src/helper/: MatrixHelper.cpp  VectorHelper.cpp
classifier/src/rankSolver/: BTDGeneralRankSolver.cpp  BTDOneVsOneRankSolver.cpp  BTOneVsAllRankSolver.cpp  RankSolverTester.cpp  SimpleTeamRankSolver.cpp
classifier/src/rankSolver/probabilisticModel/: SimpleProbabilisticModel.cpp
frequencymeasure/: CMakeLists.txt  Makefile  cmake_install.cmake
frequencymeasure/include/: AlternativeAllocator.h  BinaryDeserializer.h  BinarySerializer.h  BlockAllocator.h  DFStatistics.h  Deserializer.h  Document.h  DocumentStatistics.h  FrequencyMeasure.h  IDFStatistics.h  KSpectrum.h  LibFrequencyMeasure.h  ReadWholeDocument.h  RetrainFrequencyMeasure.h  RetrainSimilarityMeasure.h  Serializable.h  Serializer.h  SimilarityMeasure.h  SparseDocument.h  SparseDocumentCollection.h  StreamDocument.h  Types.h  ValueListAllocator.h  stree.h
frequencymeasure/src/: AbstractClasses.cpp  BinaryDeserializer.cpp  BinarySerializer.cpp  DFStatistics.cpp  DocumentStatistics.cpp  FrequencyMeasure.cpp  FrequencyMeasureStat.cpp  IDFStatistics.cpp  KSpectrum.cpp  RetrainFrequencyMeasure.cpp  SparseDocument.cpp  SparseDocumentCollection.cpp  StreamDocument.cpp  ValueListAllocator.cpp  stree.cpp
parser/src/stemmer/: CMakeLists.txt  Makefile  cmake_install.cmake
parser/src/stemmer/src_c/: stem_ISO_8859_1_danish.c  stem_ISO_8859_1_dutch.c  stem_ISO_8859_1_english.c  stem_ISO_8859_1_finnish.c  stem_ISO_8859_1_french.c  stem_ISO_8859_1_german.c  stem_ISO_8859_1_hungarian.c  stem_ISO_8859_1_italian.c  stem_ISO_8859_1_norwegian.c  stem_ISO_8859_1_porter.c  stem_ISO_8859_1_portuguese.c  (+17 more)
pyBinding/: CMakeLists.txt  Makefile  cmake_install.cmake
pyBinding/include/: Classifier.h  Context.h  ContextHelper.h  Factory.h  Factory.h~  Logger.h  LoggerHelper.h  Measure.h  MeasureImpl.h  PackageParser.h  ParsedContent.h  ParsedContentImpl.h  Parser.h  Parser.h~  ParserImpl.h  ParserImpl.h~  RetrainMeasure.h  RetrainMeasureImpl.h  TestRunner.h  traintest.py~
pyBinding/src/: Context.cpp  Logger.cpp  pyBinding.cpp
(+146 files in other folders)
